tion.
==================================CHANGELOG=================================
11/11/2025:
[+] Added Super Mario Bros. 1 & 3 (Thanks for the suggestion!)
[+] Added Spongebob's Truth or Square (Thanks for the suggestion!)
[+] Added Mario Paint (Thanks for the suggestion!)
[+] Added Pokémon FireRed (Thanks for the suggestion!)
[+] Added Papa's Wingeria (Thanks for the suggestion Kimmy J!)

11/10/2025:
[-] Okay looks like I'm changing my mind once again. The proxy has been
removed. Sorry.
[!] This experiment didn't work out the way I expected, so proxies might be
delayed for the future again.

11/09/2025:
[+] Alright it looks like I'm changing my mind. I added a proxy, but it may
be blocked for some people (if it is don't submit a bug report).
[!] Please, don't abuse the proxy!

11/07/2025:
[-] Removed Edubrain.ai due to it being blocked, may come back if I develop
a proxy.
[!] Regarding proxies, I still do not want to add a proxy unless I can fully
make it unblockable. The whole point of No Name Games is for everything to 
be untouchable, but a proxy does not do that. I know I kinda contradicted
myself with edubrain.ai, but it was unblocked for a long time, lol. Also
again, I don't make money from No Name Games and webservers cost money.

11/06/2025:
[+] Added Hotline Miami 1 (Thanks for the suggestion o-333)
[+] Added Metroid Fusion (Thanks for the suggestion Franklin)
[+] Added Metroid Mission Zero (Thanks for the suggestion Franklin)
[+] Made FNAF 1 a better version (Thanks for the bug report)

11/05/2025:
[!] I noticed people talking about the site freezing, if anyone experiencing
this issue can email me a video of it happening, please send it to
nonamegamescontact@proton.me, it'd be greatly appreciated.
[+] Made Minecraft 1.8.8 use web assembly (WASM) making it faster, and not
multiplayer-only. (Maybe a little faster than 1.12.2!)
[+] Fixed the email button opening my email in the same page, causing it to
not load.