@@ -4,3 +4,4 @@
 [+] Added Mario Paint (Thanks for the suggestion!)
 [+] Added Pokémon FireRed (Thanks for the suggestion!)
 [+] Added Papa's Wingeria (Thanks for the suggestion Kimmy J!)
+[+] Added Nazi Zombies Portable (Thanks for the suggestion) [I suppose this is what you mean by "Call of Duty Zombies Browser Edition"]
